--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
         <!-- Header content here -->
         <nav>
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="index.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="logo">
