--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@
 
     <main>
         <section id="technology">
+               <h2>Technology</h2>
+            <article>
+                <img src="wordpress.jpg" alt="No more stress"  class="bio-image-left">
+                <h3>Here’s a secret you need to know right now: You can start building websites and even generate income without ever learning HTML5, CSS, JavaScript, or PHP!</h3>
+                <p>The secret? You no longer need coding skills to create an awesome website. With modern tools, you can bypass all the technical hurdles,</p>
+                <p>How? By using website builders that offer drag-and-drop features with ready-made templates! These platforms allow you to customize your website easily and get it up and running in no time.
+                    Here are a few to consider:
+                    </p>
+                <ol>
+                    <li>	WordPress: Endless customization with easy-to-use themes.</li>
+                    <li>	Wix: Simple drag-and-drop design with tons of templates.</li>
+                    <li>	Squarespace: Elegant and professional designs, no coding required.</li>
+                </ol>
+                <p>Get started now, skip the coding, and let these tools do the heavy lifting for you!</p>
+            </article>
+        </section>
+        <section id="technology">
+            <h2>Technology</h2>
+            <article>
+                <img src="bible.jpg" alt="No more stress"  class="bio-image-left">
+                <h3>The Gen Z Bible Has Landed, and It’s Shaking Things Up!</h3>
+                <p>💥Big news alert! The Gen Z Bible has arrived, and it’s hitting different! Say goodbye to<br> old-school vibes because this is the Bible remixed for the culture. Forget stuffy verses-<br>now you’ve got lines like, “God saw it and was like, ‘bet, it’s good’” (Genesis 1:31), <br> bringing ancient wisdom into today’s slang. It’s got everything from Samson “yeeting<br> his enemies” to Mary getting the GOAT status like, “Bruh, you’re straight up blessed among<br> women, and your baby is GOAT!” (Luke 1:42).</p>
+                <p>And just wait: “Adam looked at Eve and was like, ‘bruh, she’s fire’” (Genesis 2:23). Now<br> THAT’s a mood! Ready to catch the holy vibes in your language? The Gen Z Bible is the<br> glow-up you never knew you needed.📖✨</p>
+            </article>
+        </section>
+        <section id="technology">
             <h2>Technology</h2>
             <article>
                 <img src="download (3).jpeg" alt="Astro Bot Controller by PlayStation">
