--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <<meta name="google-site-verification" content="vw30QRf3PCT2YQOnMw2Cxu9mt_tcM2lfED69xWnptVI" />
+   <meta name="google-site-verification" content="NZ4w0-v2bGZlhR2KCi0xxGfd8LVUet-GRqU6OQ-47VI" />
     <title>Blog Page</title>
     <link rel="stylesheet" href="styles1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
