--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="google-site-verification" content="NZ4w0-v2bGZlhR2KCi0xxGfd8LVUet-GRqU6OQ-47VI" />
     <title>Blog Page</title>
     <link rel="stylesheet" href="styles1.css">
+    <link rel="canonical" href="https://roberthirwa.com/index.html" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
