--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-adsense-account" content="ca-pub-2855190815868172">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HIRWATRobert</title>
     <link rel="stylesheet" href="styles.css">
