--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2855190815868172"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-2855190815868172">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="google-site-verification" content="NZ4w0-v2bGZlhR2KCi0xxGfd8LVUet-GRqU6OQ-47VI" />
     <title>Blog Page</title>
