--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             </li>
                             <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">Work</a> 
                             </li>                             
-                            <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="blog.html">Blog</a> 
+                            <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">Blog</a> 
                             </li>                             
                             <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">Contact Us</a> 
                             </li>                             
