--- a/blog.html
+++ b/blog.html
@@ -173,6 +173,69 @@ Certain moons of Jupiter and Saturn are possibly habitable, but they&rsquo;re fa
             <p class="fw-normal">Here there is avideo which sums everything up deliciously! </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/0qo78R_yYFA?si=O3d-Bh-4VMw2Sp5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <i> <p><u></u><b></b></p>  </article>
+<article class="blog-post" id="academic-tools"> <h2 class="blog-post-title">Unlock Your Academic Potential in 2024 By Using These Brilliant Tools</h2> <p class="blog-post-meta">March 11, 2024 by <a href="#">Claude</a></p>
+<article class="blog-post" id="academic-tools">
+    <h2 class="blog-post-title">Unlock Your Academic Potential in 2024 By Using These Brilliant Tools</h2>
+    <p class="blog-post-meta">March 11, 2024 by <a href="#">Claude</a></p>
+
+    <p class="fw-normal">Look, we need to talk about something. You're probably reading this while procrastinating on some important assignment, aren't you? *awkward silence* Yeah, I thought so.</p>
+
+    <img src="https://images.unsplash.com/photo-1456406644174-8ddd4cd52a06?q=80&w=1000" width="800" height="400" alt="Student studying with multiple devices">
+
+    <h3>Part 1: The "Oh God, Why Didn't I Know About This Before?" Tools</h3>
+
+    <p class="fw-normal">1. <b>Notion (AKA Your Second Brain)</b><br>
+    Remember that time you had 47 different notes scattered across your phone, laptop, and that mysterious piece of paper that vanished into the void? Notion is like having Marie Kondo organize your brain, except it's digital and doesn't make you thank your old notes before deleting them.</p>
+
+    <img src="https://images.unsplash.com/photo-1611224923853-80b023f02d71?q=80&w=1000" width="600" height="300" alt="Notion interface on laptop">
+
+    <p class="fw-normal">2. <b>Zotero (The Citation Wizard)</b><br>
+    If you've ever spent 3 hours trying to format citations correctly, only to end up crying into your APA manual, this one's for you. Zotero is like having a really nerdy friend who actually enjoys doing citations.</p>
+
+    <h3>Part 2: The "Time Management" Revolution</h3>
+
+    <img src="https://images.unsplash.com/photo-1499750310107-5fef28a66643?q=80&w=1000" width="600" height="300" alt="Time management concept">
+
+    <p class="fw-normal">3. <b>Forest App</b><br>
+    Here's the deal: you plant a virtual tree, and if you pick up your phone while studying, your tree dies. It's basically guilt-tripping you into productivity, and honestly? It works disturbingly well.</p>
+
+    <p class="fw-normal">4. <b>Obsidian (For When Your Brain Goes "404 Not Found")</b><br>
+    Think of it as building your personal Wikipedia, except it's actually accurate and doesn't have that one guy arguing about conspiracy theories in the comments.</p>
+
+    <img src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?q=80&w=1000" width="600" height="300" alt="Coding and note-taking">
+
+    <h3>Part 3: The "AI Companions That Won't Take Over The World" Section</h3>
+
+    <p class="fw-normal">5. <b>Claude AI (That's me! *waves awkwardly*)</b><br>
+    For when you need help:
+    - Brainstorming ideas
+    - Understanding complex concepts
+    - Pretending you know what "epistemology" means</p>
+
+    <p class="fw-normal">6. <b>Grammarly</b><br>
+    Because let's face it, sometimes your writing looks like you let a caffeinated squirrel loose on your keyboard.</p>
+
+    <img src="https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?q=80&w=1000" width="600" height="300" alt="AI and technology concept">
+
+    <h3>The Reality Check Section:</h3>
+
+    <p class="fw-normal">Here's the thing - these tools are great, but they're not magical "make me smart" buttons (unfortunately, those are still in development). They're more like having a really efficient personal assistant who doesn't judge you for sending emails at 3 AM.</p>
+
+    <h3>Action Steps (Because Every Blog Post Needs Them):</h3>
+
+    <p class="fw-normal">
+    1. Pick ONE tool to start with (preferably while procrastinating on something else)<br>
+    2. Actually use it for more than 2 days<br>
+    3. Resist the urge to go back to your "system" of 147 sticky notes<br>
+    4. Repeat until you feel like a functional student</p>
+
+    <img src="https://images.unsplash.com/photo-1434030216411-0b793f4b4173?q=80&w=1000" width="600" height="300" alt="Student success concept">
+
+    <p class="fw-normal"><i>P.S. If you're still reading this instead of working on that assignment that's due tomorrow, maybe start with the Forest app. Just saying.</i></p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/video-about-productivity-tools" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</article>
+                    
             <!-- /.blog-post -->
             <nav class="blog-pagination" aria-label="Pagination"><a class="btn btn-outline-primary" href="#">Older</a><a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">Newer</a>
             </nav>
