--- a/blog.html
+++ b/blog.html
@@ -173,14 +173,12 @@ Certain moons of Jupiter and Saturn are possibly habitable, but they&rsquo;re fa
             <p class="fw-normal">Here there is avideo which sums everything up deliciously! </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/0qo78R_yYFA?si=O3d-Bh-4VMw2Sp5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <i> <p><u></u><b></b></p>  </article>
-<article class="blog-post" id="academic-tools"> <h2 class="blog-post-title">Unlock Your Academic Potential in 2024 By Using These Brilliant Tools</h2> <p class="blog-post-meta">March 11, 2024 by <a href="#">Claude</a></p>
-<article class="blog-post" id="academic-tools">
     <h2 class="blog-post-title">Unlock Your Academic Potential in 2024 By Using These Brilliant Tools</h2>
-    <p class="blog-post-meta">March 11, 2024 by <a href="#">Claude</a></p>
+    <p class="blog-post-meta">March 11, 2024 by <a href="instagram.com/roberthirw/">Robert</a></p>
 
     <p class="fw-normal">Look, we need to talk about something. You're probably reading this while procrastinating on some important assignment, aren't you? *awkward silence* Yeah, I thought so.</p>
 
-    <img src="https://images.unsplash.com/photo-1456406644174-8ddd4cd52a06?q=80&w=1000" width="800" height="400" alt="Student studying with multiple devices">
+    <img src="https://images.unsplash.com/photo-1456406644174-8ddd4cd52a06?q=80&w=1000" width="600" height="400" alt="Student studying with multiple devices">
 
     <h3>Part 1: The "Oh God, Why Didn't I Know About This Before?" Tools</h3>
 
