--- a/blog.html
+++ b/blog.html
@@ -173,7 +173,7 @@ Certain moons of Jupiter and Saturn are possibly habitable, but they&rsquo;re fa
             <p class="fw-normal">Here there is avideo which sums everything up deliciously! </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/0qo78R_yYFA?si=O3d-Bh-4VMw2Sp5d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <i> <p><u></u><b></b></p>  </article>
-    <h2 class="blog-post-title">Unlock Your Academic Potential in 2024 By Using These Brilliant Tools</h2>
+    <h2 class="blog-post-title" id="studies">Unlock Your Academic Potential in 2024 By Using These Brilliant Tools</h2>
     <p class="blog-post-meta">March 11, 2024 by <a href="instagram.com/roberthirw/">Robert</a></p>
 
     <p class="fw-normal">Look, we need to talk about something. You're probably reading this while procrastinating on some important assignment, aren't you? *awkward silence* Yeah, I thought so.</p>
