--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                             <div class="fw-bold mb-1 text-primary">
                                                 <a href="#" class="link-primary text-decoration-none">Studying Tips</a>, <a href="#" class="link-primary text-decoration-none">Tech</a>
                                             </div>
-                                            <a href="#" class="link-dark text-decoration-none"><h3 class="card-title h4">Unlock your Academic potential in 2024 by using these brilliant tools.</h3></a>
+                                            <a href="blog.html/#studies" class="link-dark text-decoration-none"><h3 class="card-title h4">Unlock your Academic potential in 2024 by using these brilliant tools.</h3></a>
                                             <p class="card-text">I’m thrilled to share my top three AI tools that can elevate your studies in 2024! These innovative resources are designed to enhance learning, boost productivity, and provide personalized support. Embrace these tools and unlock your academic potential!</p>
                                         </div>
                                         <div class="align-items-center card-footer d-flex justify-content-between py-3 small">
