--- a/quotes.html
+++ b/quotes.html
@@ -98,14 +98,14 @@
                         <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="index.html">Home</a></li>
                         <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">About</a> 
                         </li>
-                        <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">Services</a> 
+                    <!--    <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">Services</a> 
                         </li>
                         <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">Work</a> 
                         </li>                             
                         <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="blog.html">Blog</a> 
                         </li>                             
                         <li class="nav-item"> <a class="nav-link px-lg-3 py-lg-4" href="#">Contact Us</a> 
-                        </li>                             
+                        </li>         -->                    
                     </ul>                         <a class="btn btn-light ms-lg-auto ps-4 pe-4 rounded-pill" href="quotes.html">Request a Quote</a> 
                 </div>                     
             </div>                 
