--- a/quotes.html
+++ b/quotes.html
@@ -113,7 +113,19 @@
     </header>
 <div class="story-container">
     <div class="slides">
-        <div class="slide"><img src="https://images.pexels.com/photos/9451273/pexels-photo-9451273.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Side Image Left"></div>
+<div class="slide"><img src="" alt="Side Image Left"></div>
+<div class="slide"><img src="" alt="Side Image Left"></div>
+	    <div class="slide"><img src="https://www.brainyquote.com/photos_tr/en/t/thomasfuller/100959/thomasfuller1-2x.jpg" alt="Side Image Left"></div>
+	    <div class="slide"><img src="https://cdn.shopify.com/s/files/1/0070/7032/files/einstein.png?v=1706739683" alt="Side Image Left"></div>
+	    <div class="slide"><img src="https://cdn.shopify.com/s/files/1/0070/7032/files/churchhill-quote.png?v=1706739710" alt="Side Image Left"></div>
+	    <div class="slide"><img src="https://cdn.shopify.com/s/files/1/0070/7032/files/rogers-quote.png?v=1706739736" alt="Side Image Left"></div>
+	   <!-- <div class="slide"><img src="" alt="Side Image Left"></div>
+	    <div class="slide"><img src="" alt="Side Image Left"></div>-->
+
+
+	    
+        <div class="slide"><img src="https://images.pexels.com/photos/9451273/pexels-photo-9451273.jpeg?auto=co
+				   mpress&cs=tinysrgb&w=600" alt="Side Image Left"></div>
         <div class="slide"><img src="https://images.pexels.com/photos/8383669/pexels-photo-8383669.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Story 1"></div>
         <div class="slide"><img src="https://images.pexels.com/photos/8456600/pexels-photo-8456600.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Story 2"></div>
         <div class="slide"><img src="https://images.pexels.com/photos/26546832/pexels-photo-26546832/free-photo-of-quote-on-a-window-glass.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Story 3"></div>
